<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewmodel"
            type="com.example.alittlemusic.ui.login.LoginViewModel" />
    </data>
    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".ui.login.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingStart="28dp"
            android:paddingEnd="28dp">

            <ImageView
                android:id="@+id/login_img"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/icon_log"
                android:layout_marginBottom="32dp"/>

            <RadioGroup
                android:id="@+id/login_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/phone_login_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:button="@null"
                    android:checked="true"
                    android:text="@string/phone_login_text"
                    android:textColor="@drawable/radio_text_sel" />

                <RadioButton
                    android:id="@+id/email_login_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:text="@string/email_login_text"
                    android:textColor="@drawable/radio_text_sel" />
            </RadioGroup>


            <EditText
                android:id="@+id/email"
                style="@style/mEditText"
                android:layout_marginTop="8dp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                android:text="@={viewmodel.email}"
                android:visibility="gone" />

            <EditText
                android:id="@+id/phone"
                style="@style/mEditText"
                android:layout_marginTop="8dp"
                android:hint="@string/prompt_phone"
                android:inputType="phone"
                android:selectAllOnFocus="true"
                android:text="@={viewmodel.phone}" />

            <EditText
                android:id="@+id/password"
                style="@style/mEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:text="@={viewmodel.password}" />

            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/primary"
                android:enabled="false"
                android:padding="12dp"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:cornerRadius="4dp" />

            <!--        <TextView-->
            <!--            android:layout_width="wrap_content"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:layout_marginTop="8dp"-->
            <!--            android:text="@string/forgot"-->
            <!--            android:textSize="12sp" />-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1.5dp"
                    android:layout_weight="1"
                    android:background="#e2e2e2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="OR"
                    android:textColor="#9a9a9a"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1.5dp"
                    android:layout_weight="1"
                    android:background="#e2e2e2" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawablePadding="4dp"
                android:gravity="center"
                android:text="微信登录"
                android:textColor="@color/primary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/icon_wx" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="#e2e2e2"
            android:layout_marginBottom="8dp"
            android:layout_above="@+id/sign_up"/>


        <TextView
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="14dp"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textSize="12sp" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            android:layout_centerInParent="true" />

    </RelativeLayout>
</layout>